Adds support for custom type matchers with a parameter.